--- a/RVFS/RVFS/templates/rvfsite/unsub.html
+++ b/RVFS/RVFS/templates/rvfsite/unsub.html
@@ -5,7 +5,7 @@ Newsletter Opt Out
 {% endblock %}
 
 {% block body %}
-<div class="registration">
+<div class="registration text-center">
     <div class="placeholder-md"></div>
     <p class="text-standard">Your are no longer on the newsletter mailing list.</p>
     <p class="text-standard">We will miss you and hope you join again.</p>
