--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine:bold|Niconne|Cardo">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine:bold|Cinzel+Decorative|Cardo">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/app.css' %}">
@@ -51,7 +51,7 @@
               {% else %}
               <ul class="info banner-text">
                 <li>
-                  <p class="text-standard">Muninn@ravenvfm.com</p>
+                  <p class="text-standard">Creations@ravenvfm.com</p>
                 </li>
                 <li>
                   <p class="text-standard">
@@ -171,7 +171,7 @@
             <div class="col text-right">
               <h5 class="text-standard">Contact</h5>
               <hr class="footer-break">
-              <h6 class="text-standard">Muninn@ravenvfm.com</h6>
+              <h6 class="text-standard">Creations@ravenvfm.com</h6>
               <h6 class="text-standard">(206)-372-6501</h6>
               <ul class="links">
                 <li>
@@ -221,7 +221,6 @@ $('#mailing').click(function (event) {
   $.get('/update-mailing/',
     function(data) {
       $('#mailing-parent').html(data);
-      console.log(data);
     }
   );
 });
