--- a/RVFS/catalog/templates/product.html
+++ b/RVFS/catalog/templates/product.html
@@ -14,6 +14,7 @@
         <div class="col item-details">
             <h4 class="text-standard">price: ${{ product.price }}</h4>
             <h4 class="text-standard">{% if product.stock %}stock: {{ product.stock }}{% elif product.stock == 0 %}Out of Stock{% else %}In Stock{% endif %}</h4>
+            <p class="text-standard description-font">Created by: {{ product.creator }}</p>
             <p class="text-standard description-font">{{ product.description }}</p>
             <p>
                 {% if product.length %}
